[package]
name = "cargo-epublish"
version = "0.0.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "a simple tool for patch the version of configuration of crate"
documentation = "https://docs.rs/epublish"
repository = "https://github.com/sunboyZgz/epublish"
readme = "README.md"
keywords = ["cli","tool"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="3.1.18", features=["cargo"]}
toml = "0.5.9"
serde_derive = "1.0.137"
serde = "1.0.137"
regex = "1.5.6"
lazy_static = "1.4.0"

[max-versions]
minor = 10
patch = 10